// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic rendering case snapshot 1`] = `
.c0 {
  color: inherit;
  font-size: inherit;
  font-style: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<a
  class="c0"
  href="/home"
  style="color:orange;font-size:16px"
  theme="[object Object]"
  title="home"
>
  some text1
  <span>
    some text2
  </span>
</a>
`;

exports[`basic rendering case snapshot with theme 1`] = `
.c0 {
  color: blue;
  font-size: inherit;
  font-style: italic;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<a
  class="c0"
  href="/home"
  style="color:orange;font-size:16px"
  theme="[object Object]"
  title="home"
>
  some text1
  <span>
    some text2
  </span>
</a>
`;
